01Jul99=======================================================================
1. Altered priv to 5 for connect.pl to match disconnect for nodes
29Jun99=======================================================================
1. fixed merge command that I broke.
2. added some randomness in waittimes for aborted outgoing messages 
3. Message Queuing now only occurs every 5 minutes (configurable if anyone 
wants to write the command for doing it) nad on receipt of a PC16. This is
a further attempt at sorting the crossing of messages!
4. a PC33 will cause another attempt at queuing. If you are on a roll, keep
going!
28Jun99=======================================================================
1. console.pl now works with history and editting.
2. added scrolling to stuff sent by the cluster.
3. added colours to things.
27Jun99=======================================================================
1. added WWV filtering
2. added timeouts to for forwarding Messages, also added a waiting time for
failed (stalled) outgoing messages.
3. Incoming messages will now have priority over outgoing messages to the
same node.
4. Added 'catchup' command which will 'catchup' messages to date for a node. 
This means that when you start forwarding to a node, it doesn't get all the
messages queued up that are probably old.
5. added 'uncatchup' which does the opposite of the above.
6. fixed kill full and PC49 handling so that it actually works.
7. Fixed local aliases so they add to the front of the standard ones. This
means you only need to add your specials or override the system ones you need
to.
21Jun99=======================================================================
1. changed regex for cluster->client msgs so that strings like |---| are no
longer ignored.
20Jun99=======================================================================
1. prevented a merge to myself (causes a loop)
18Jun99=======================================================================